--- a/src/app/shared/shared-styles/skeleton.scss
+++ b/src/app/shared/shared-styles/skeleton.scss
@@ -45,6 +45,15 @@
 
     }
 
+    .skeleton-text{
+        &::after {
+            height: .7rem;
+            margin: auto ;
+            width: 80%;
+
+        }
+    }
+    
     .skeleton-slider {
         &::after {
             border-radius: 0px;
@@ -95,6 +104,8 @@
             animation: none;
         }
     }
+
+
 
 
 }
